Updating variables to follow dot notation (#1981)
https://linear.app/ngrok/issue/DOC-560/typo-on-oidc-traffic-policy-page-and-terminate-tls-traffic-policy-page

Co-authored-by: Sachin Shah <sachinshah@mac.mynetworksettings.com>

--- a/traffic-policy/actions/oidc.mdx
+++ b/traffic-policy/actions/oidc.mdx
@@ -317,6 +317,6 @@ on_http_request:
 	Returns true when the current session reached the max duration.
 </ConfigField>
 
-<ConfigField title="actions.ngrok.oidc.userinfo_refreshed" type="boolean">
+<ConfigField title="actions.ngrok.oidc.user_info_refreshed" type="boolean">
 	Returns true when ngrok updates the user information on the identity.
 </ConfigField>
