--- a/traffic-policy/actions/terminate-tls.mdx
+++ b/traffic-policy/actions/terminate-tls.mdx
@@ -357,8 +357,8 @@ curl --cert client.crt --key client.key https://terminate-tls-example.ngrok.app
 | `actions.ngrok.terminate_tls.client.subject`                     | `string`      | The entity to whom the certificate is issued as a string roughly following the RFC 2253 Distinguished Names syntax. |
 | `actions.ngrok.terminate_tls.client.validity.not_after`          | `timestamp`   | Expiration date and time when the certificate is no longer valid.                                                   |
 | `actions.ngrok.terminate_tls.client.validity.not_before`         | `timestamp`   | Start date and time when the certificate becomes valid.                                                             |
-| `actions.ngrok.terminate_tls.error_code`                         | `string`      | The error code if the action encountered any errors during its execution.                                           |
-| `actions.ngrok.terminate_tls.error_message`                      | `string`      | The error message if the action encountered any errors during its execution.                                        |
+| `actions.ngrok.terminate_tls.error.code`                         | `string`      | The error code if the action encountered any errors during its execution.                                           |
+| `actions.ngrok.terminate_tls.error.message`                      | `string`      | The error message if the action encountered any errors during its execution.                                        |
 | `actions.ngrok.terminate_tls.server.extensions[i].critical`      | `bool`        | True if the extension is critical.                                                                                  |
 | `actions.ngrok.terminate_tls.server.extensions[i].id`            | `string`      | The identifier that specifies the type of extension.                                                                |
 | `actions.ngrok.terminate_tls.server.extensions[i].value`         | `[]byte`      | The data for the extension.                                                                                         |
